plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
    id 'org.spongepowered.mixin' version '0.7-SNAPSHOT'
    id 'idea'
}

version = mod_version
group = mod_group_id

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

minecraft {
    mappings channel: mapping_channel, version: mapping_version
    copyIdeResources = true

    runs {
        configureEach {
            workingDirectory project.file(findProperty('run_directory') ?: 'run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'

            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }

        client {
            property 'forge.enabledGameTestNamespaces', mod_id
        }

        server {
            property 'forge.enabledGameTestNamespaces', mod_id
            args '--nogui'
        }

        gameTestServer {
            property 'forge.enabledGameTestNamespaces', mod_id
        }

        data {
            workingDirectory project.file('run-data')
            args '--mod', mod_id, '--all', '--output', file('src/generated/resources/'),
                    '--existing', file('src/main/resources/')
        }
    }
}

mixin {
    add sourceSets.main, "${mod_id}.refmap.json"
    config "${mod_id}.mixins.json"
}

jarJar.enable()

tasks.named('jarJar', Jar).configure {
    archiveClassifier = ''
    includeEmptyDirs = false
    preserveFileTimestamps = false
    reproducibleFileOrder = true
}

sourceSets.main.resources {
    srcDir 'src/generated/resources'
    exclude '**/*.bbmodel'
    exclude '**/.cache/**'
    exclude 'assets/examplemod/**'
}

repositories {
    maven {
        name = 'MinecraftForgeReleases'
        url = 'https://maven.minecraftforge.net/releases/'
        content { includeGroup 'net.minecraftforge' }
    }
    maven {
        name = 'Modrinth'
        url = 'https://api.modrinth.com/maven'
        content { includeGroup 'maven.modrinth' }
    }
    maven {
        name = 'CurseMaven'
        url = 'https://www.cursemaven.com'
        content { includeGroup 'curse.maven' }
    }
    maven {
        name = 'ModMaven'
        url = 'https://modmaven.dev/'
        content { includeGroup 'org.appliedenergistics' }
    }
    maven {
        name = 'JaredMaven'
        url = 'https://maven.blamejared.com'
        content { includeGroup 'mezz.jei' }
    }
    maven {
        name = 'Sponge'
        url = 'https://repo.spongepowered.org/repository/maven-public/'
        content { includeGroup 'org.spongepowered' }
    }
    mavenCentral()
}

configurations {
    localRuntime
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"

    api fg.deobf("maven.modrinth:ae2:${ae2_version}")


    compileOnly fg.deobf("mezz.jei:jei-1.20.1-forge:${jei_version}")
    if (!project.hasProperty('withoutJei')) {
        localRuntime fg.deobf("mezz.jei:jei-1.20.1-forge:${jei_version}")
    }

    testImplementation platform('org.junit:junit-bom:5.11.4')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    compileOnly(annotationProcessor("io.github.llamalad7:mixinextras-common:${mixinextras_version}"))
    localRuntime "io.github.llamalad7:mixinextras-forge:${mixinextras_version}"
    jarJar("io.github.llamalad7:mixinextras-forge:[${mixinextras_version},)") {
        jarJar.pin(it, mixinextras_version)
    }
    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
}

tasks.named('processResources', ProcessResources).configure {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            forge_version          : forge_version,
            forge_version_range    : forge_version_range,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description,
            ae2_version_range: ae2_version_range,
            extendedae_version_range: extendedae_version_range,
            ae2wtlib_version_range: ae2wtlib_version_range,
            jei_version_range: jei_version_range,
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
        expand replaceProperties + [project: project]
    }
}

tasks.named('jar', Jar).configure {
    archiveClassifier = 'slim'
    manifest {
        attributes([
                'Specification-Title'    : mod_id,
                'Specification-Vendor'   : mod_authors,
                'Specification-Version'  : '1',
                'Implementation-Title'   : project.name,
                'Implementation-Version' : project.jar.archiveVersion,
                'Implementation-Vendor'  : mod_authors,
                'MixinConfigs'           : "${mod_id}.mixins.json",
        ])
    }

    includeEmptyDirs = false
    preserveFileTimestamps = false
    reproducibleFileOrder = true
    finalizedBy 'reobfJar'
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            artifactId = mod_id
            from components.java
            jarJar.component(it)
        }
    }
    repositories {
        maven {
            url = uri(layout.projectDirectory.dir('repo'))
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs += ['-Xmaxerrs', '1000', '-Xdiags:verbose']
}

tasks.withType(ProcessResources).configureEach {
    filteringCharset = 'UTF-8'
    includeEmptyDirs = false
}

tasks.named('test', Test).configure {
    useJUnitPlatform()
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}

// Both distributable jars must use Forge runtime names.
reobf { jarJar {} }
tasks.named("jarJar").configure { finalizedBy "reobfJarJar" }
tasks.named("build").configure { dependsOn "jarJar" }
